# lpmatrixgrounder

./: .gitmodules  CMakeLists.txt  README.md  sh_build.sh  sh_configure.sh  sh_run.sh
experiments/datasets/: note.txt
experiments/datasets/3-Coloring/: 3Coloring-ASSAT.txt  3Coloring-DLV.txt  3Coloring-NPDatalog.txt  3Coloring-OPL.mod.txt  3Coloring-Smodels.txt
experiments/datasets/3-Coloring/instances/: 01_octahedral.txt  02_33fan.txt  03_42fan.txt  04_K133.txt  05_43cone.txt  06_43fan.txt  07_52fan.txt  08_K134.txt  g1000a.txt  g1000b.txt  g1000c.txt  g1000d.txt  g1000e.txt  g1500a.txt  g1500b.txt  g1500c.txt  g1500d.txt  g1500e.txt  g2000a.txt  g2000b.txt  g2000c.txt  g2000d.txt  g2000e.txt  g2500a.txt  g2500b.txt  g2500c.txt  g2500d.txt  g2500e.txt  g3000a.txt  g3000b.txt  g3000c.txt  g3000d.txt  g3000e.txt  g3500a.txt  g3500b.txt  g3500c.txt  g3500d.txt  g3500e.txt  g4000a.txt  g4000b.txt  (+18 more)
experiments/datasets/HamiltonianCycle/: HamiltonianCycle-ASSAT.txt  HamiltonianCycle-DLV.txt  HamiltonianCycle-NPDatalog.txt  HamiltonianCycle-Smodels.txt  hc1.mod  hc2.mod
experiments/datasets/HamiltonianCycle/instances/: nv20a200.txt  nv30a398.txt  nv40a600.txt  nv40a800.txt  nv50a1000.txt  nv50a1200.txt  nv50a1400.txt  nv50a238.txt  nv50a256.txt  nv50a277.txt  (+29 more)
experiments/datasets/LatinSquares/: LatinSquares-ASSAT.txt  LatinSquares-Clasp.txt  LatinSquares-DLV.txt  LatinSquares-NPDatalog.txt  LatinSquares-OPL.mod.txt
experiments/datasets/MinColoring/: MinColoring-DLV.txt  MinColoring-NPDatalog.txt  MinColoring-OPL.mod.txt
experiments/datasets/NQueens/: queens-ASSAT.txt  queens-DLV.txt  queens-NPDatalog.txt  queens-OPL.mod.txt  queens-Smodels.txt  queens-logic.txt
experiments/datasets/TransitiveClosure/: Reachability-ASSAT.txt  Reachability-DLV.txt  Reachability-NPDatalog.txt  Reachability-OPL.mod.txt  Reachability-Smodels.txt  Reachability-XSB.txt
python/: main.py  requirements.txt
samples/: example.lp  graph_3nodes.lp  graph_6nodes.lp  model_graphcoloring.lp
src/: lpmatrixgrounder.cpp  lpmatrixgrounder.h  main.cpp
(+123 files in other folders)
